# elemental-chess

dna/zomes/chess/src/: chess_game.rs  chess_game_result.rs
dna/zomes/invitations/: Cargo.toml
dna/zomes/profiles/: Cargo.toml
