[package]
authors = ["manuel_puentes"]
edition = "2018"
name = "invitations"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "invitations"

[dependencies]
hc_zome_invitations = {git = "https://github.com/eyss/hc_zome_invitations", rev = "7a68048b5669ad683ee8949374ebe1b81455cf00", package = "hc_zome_invitations"}
