[package]
name = "profiles"
version = "0.0.1"
authors = [ "guillem_cordoba" ]
edition = "2018"

[lib]
name = "profiles"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
hc_zome_profiles = {git = "https://github.com/holochain-open-dev/profiles", rev =  "ba033c25b9800a78c14bceec889bc4c14b410875", package = "hc_zome_profiles"}
